# BrainPilot-AI

./: .editorconfig  .env.development.example  .env.example  .env.production.example  .env.staging.example  .gitignore  .prettierrc  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  LICENSE  README.md  SECURITY.md  build.sh  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  lint-staged.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  replit.md
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  brainpilot-ai-gateway.md  brainpilot-api-routing.md  brainpilot-arch.md  brainpilot-enterprise-audit.md  brainpilot-frontend-coverage.md  brainpilot-production-fixes.md  brainpilot-workflow-setup.md  gemini-integration.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  lint.yml  main.yml  security.yml  test.yml
artifacts/api-server/: package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts  seed.ts
artifacts/brainpilot/: index.html  package.json
artifacts/brainpilot-web/: package.json  vite.config.ts
artifacts/brainpilot-web/.replit-artifact/: artifact.toml
artifacts/brainpilot-web/src/: App.tsx  index.css
artifacts/brainpilot/src/: App.tsx  index.css
attached_assets/: Pasted--BACKEND-FIRST-INTEGRATION-REQUIREMENTS-The-frontend-MU_1780307887410.txt  Pasted--FINAL-ENTERPRISE-AUDIT-QA-SECURITY-PRODUCTION-READINES_1780482245416.txt  Pasted--FULL-HUMAN-LIKE-QA-AUDIT-IMPROVEMENT-AUTO-FIX-PROMPT-Y_1780394784918.txt  Pasted--Formatting-may-be-inconsistent-from-source-You-are-a-P_1780305725316.txt  Pasted--REAL-STUDENT-USER-SIMULATION--1780458849661_1780458849662.txt  Pasted--RENDER-DEPLOYMENT-PRODUCTION-INFRASTRUCTURE-REQUIREMEN_1780481277235.txt  Pasted-A-Blueprint-file-was-found-but-there-was-an-issue-servi_1780734521966.txt  Pasted-ENTERPRISE-PROJECT-CLEANUP-HUMANIZATION-REQUIREMENTS-Yo_1780478989435.txt  Pasted-You-are-a-Principal-AI-Engineer-Senior-Backend-Engineer_1780461202762.txt  Pasted-You-are-a-Principal-Backend-Architect-Senior-Django-RES_1780120943190.txt  Pasted-You-are-a-Principal-Frontend-Architect-Senior-React-Eng_1780317128280.txt  Pasted-You-are-a-Principal-Product-Designer-Senior-UX-Designer_1780319417360.txt  Pasted-You-are-a-Principal-Software-Architect-Staff-Backend-En_1780458042890.txt  Pasted-You-are-a-Senior-AI-Engineer-Senior-Backend-Engineer-an_1780460888036.txt  Pasted-You-are-a-Senior-Backend-Engineer-Principal-Software-Ar_1780234191180.txt  Pasted-You-are-a-Senior-DevOps-Engineer-and-Full-Stack-Archite_1780910662222.txt  Pasted-You-are-a-Senior-Software-Architect-Principal-Backend-F_1780732376874.txt  Pasted-You-are-a-Senior-Software-Architect-Principal-Full-Stac_1780478711428.txt  Pasted-You-are-a-senior-full-stack-DevOps-engineer-I-have-a-fu_1781162215322.txt
backend/: .dockerignore  .env.example  AI_PROVIDERS.md  Dockerfile  Makefile  Procfile  docker-compose.yml  manage.py  run_dev.sh  run_prod.sh
backend/ai/: exceptions.py  factory.py  gateway.py  interfaces.py  services.py  types.py  urls.py  views.py
backend/common/: base_models.py  exceptions.py  middleware.py  pagination.py  permissions.py  responses.py  validators.py
backend/config/: celery.py  startup_checks.py  urls.py  wsgi.py
backend/deployment/: render.yaml
backend/requirements/: base.txt  development.txt  production.txt
backend/scripts/: start.sh
backend/tests/: conftest.py  test_api_auth.py  test_api_auth_extended.py  test_avatar_upload.py  test_chatbot.py  test_dashboard_service.py  test_notes_service.py  test_pdfs.py  test_planner.py  test_productivity_service.py  test_register.py  test_subscriptions.py  test_viewsets_auth.py  test_viewsets_goals.py  test_viewsets_notes.py
backend/utils/: helpers.py
docs/: Pasted-You-are-a-Principal-Software-Architect-Staff-Full-Stack_1780321689406.txt  index.md
docs/ai-agents/: overview.md
docs/architecture/: overview.md
docs/backend/: api-reference.md  authentication.md
docs/database/: schema.md
docs/deployment/: guide.md
docs/frontend/: component-guide.md
docs/security/: practices.md
docs/testing/: guide.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  sentry.ts
lib/api-spec/: openapi.yaml
scripts/: package.json
scripts/src/: workspace.ts
(+237 files in other folders)
