[project]
name = "brainpilot-ai"
version = "1.0.0"
description = "BrainPilot AI — Gemini-powered study companion SaaS backend"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.3.0",
    "django-filter>=25.2",
    "django-ratelimit>=4.1.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "google-genai>=2.7.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "tenacity>=9.1.4",
    "whitenoise>=6.12.0",
    "drf-spectacular>=0.28.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S"]
ignore = ["E501", "S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501", "F401", "N806"]
"*/tests/*" = ["S101", "S106"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["migrations/", "conftest.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --reuse-db"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["."]
omit = ["*/migrations/*", "*/tests/*", "*/conftest.py", "manage.py", "*/settings/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
