[project]
name = "brainpilot-ai"
version = "1.0.0"
description = "BrainPilot AI — Gemini-powered study companion SaaS backend"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3",
    "dj-database-url>=2.1",
    "django>=5.0,<6.0",
    "django-cors-headers>=4.3",
    "django-debug-toolbar>=4.3",
    "django-filter>=24.0",
    "django-ratelimit>=4.1",
    "django-redis>=5.4",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "factory-boy>=3.3.3",
    "google-genai>=1.0",
    "gunicorn>=21.0",
    "pillow>=10.0",
    "psycopg2-binary>=2.9",
    "pypdf>=4.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "tenacity>=8.2",
    "whitenoise>=6.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S"]
ignore = ["E501", "S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501", "F401", "N806"]
"*/tests/*" = ["S101", "S106"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["migrations/", "conftest.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --reuse-db"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["."]
omit = ["*/migrations/*", "*/tests/*", "*/conftest.py", "manage.py", "*/settings/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
